fix: elements shifting

--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -6,7 +6,7 @@
   html,
   body {
     @apply h-full m-0;
-    scrollbar-gutter: stable both-edges;
+    scrollbar-gutter: stable;
   }
 
   h1 {
